Assignments/assignment04/temp.txt
sa@isa-VirtualBox:~/Desktop/checkout_apr20/cs149_DCruz_SSheikh/Assignments/assignment04$ gcc -Wall -Werror  mem_tracer.c Node.c Node.h
Node.c:15:6: error: conflicting types for ‘PrintNodes’
   15 | void PrintNodes(Node *refNode) // Recursive function to
      |      ^~~~~~~~~~
In file included from Node.c:7:
Node.h:16:6: note: previous declaration of ‘PrintNodes’ was here
   16 | void PrintNodes(Node refNode); // Recursive function to print all nodes
      |      ^~~~~~~~~~
Node.c: In function ‘PrintNodes’:
Node.c:17:5: error: implicit declaration of function ‘printf’ [-Werror=implicit-function-declaration]
   17 |     printf("%s", refNode->line); // This prints the actual line of the function
      |     ^~~~~~
Node.c:17:5: error: incompatible implicit declaration of built-in function ‘printf’ [-Werror]
Node.c:8:1: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
    7 | #include "Node.h"
  +++ |+#include <stdio.h>
    8 | 
Node.c: In function ‘FreeNodes’:
Node.c:30:9: error: implicit declaration of function ‘PUSH_TRACE’ [-Werror=implicit-function-declaration]
   30 |         PUSH_TRACE("Free-Nodes");  // Refer to PUSH_TRACE in memtrace.c
      |         ^~~~~~~~~~
Node.c:32:9: error: implicit declaration of function ‘free’ [-Werror=implicit-function-declaration]
   32 |         free(node->line);          // frees memory allotted to the string inside the struct
      |         ^~~~
Node.c:32:9: error: incompatible implicit declaration of built-in function ‘free’ [-Werror]
Node.c:8:1: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
    7 | #include "Node.h"
  +++ |+#include <stdlib.h>
    8 | 
Node.c:34:9: error: implicit declaration of function ‘POP_TRACE’ [-Werror=implicit-function-declaration]
   34 |         POP_TRACE();               // Refer to POP_TRACE in memtrace.c
      |         ^~~~~~~~~
Node.c: At top level:
Node.c:38:6: error: conflicting types for ‘PrintNodes’
   38 | void PrintNodes(Node *node)
      |      ^~~~~~~~~~
In file included from Node.c:7:
Node.h:16:6: note: previous declaration of ‘PrintNodes’ was here
   16 | void PrintNodes(Node refNode); // Recursive function to print all nodes
      |      ^~~~~~~~~~
Node.c: In function ‘PrintNodes’:
Node.c:44:9: error: implicit declaration of function ‘dprintf’ [-Werror=implicit-function-declaration]
   44 |         dprintf(2, "%d: %s\n", node->lineIndex, node->line); // Print out to logfile somethin like this: '###: insert_line_string_here' into its own line
      |         ^~~~~~~
cc1: all warnings being treated as errors


compilation error.